# HPRS

./: .gitignore  AlexNet.ipynb  Augmenting and Importing Images  GoogLeNet_implementation.py  Project_Resnet_Code_Final.ipynb  README.md  ResNeXt implementation.ipynb  ResNeXt_architecture.py  ResNeXt_architecture_with_training  ResNeXt_architecture_with_training.py  ResNet34_Implementation  data.py  data_prep.py  googlenet_scalp.py  googlenet_scalp_training.ipynb  image_preprocess.py  model_evaluation.ipynb  model_evaluation.py  model_ffe.ipynb  model_finetune.ipynb  model_trainer.py  models.py  pyproject.toml  requirements.txt  utils.py
demo/: data_prep_demo.ipynb
latex/: CS4851.bib  egpaper_final.tex  ieee_fullname.bst
weights_ffe/: AlexNet_Scalp_ft.pt  AlexNet_Scalp_ft_accuracies.pt  AlexNet_Scalp_ft_losses.pt  GoogLeNet_Scalp_ft.pt  GoogLeNet_Scalp_ft_accuracies.pt  GoogLeNet_Scalp_ft_losses.pt  ResNeXt_Scalp_ft.pt  ResNeXt_Scalp_ft_accuracies.pt  ResNeXt_Scalp_ft_losses.pt
weights_ft/: AlexNet_Scalp_ft.pt  AlexNet_Scalp_ft_accuracies.pt  AlexNet_Scalp_ft_losses.pt  GoogLeNet_Scalp_ft.pt  GoogLeNet_Scalp_ft_accuracies.pt  GoogLeNet_Scalp_ft_losses.pt  ResNeXt_Scalp_ft.pt  ResNeXt_Scalp_ft_accuracies.pt  ResNeXt_Scalp_ft_losses.pt
