[tool.poetry]
name = "hair_deisease_cnn_project"
version = "0.1.0"
description = ""
authors = ["Joseph Yoo <fizzyinc3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
